[project]
name = "pyxc"
version = "0.0.0"
description = "Python point-to-point correlation library."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Sang-Hyeok Lee"},
    {name = "Mattis Seehaus"},
]
maintainers = [
    {name = "Sang-Hyeok Lee"},
]
keywords = [
    "Point-to-point correlation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
'numpy >= 1.21.3; python_version == "3.10"',
'numpy >= 1.23.2; python_version == "3.11"',
"scipy",
"tqdm",
]

[project.optional-dependencies]
test = [
"pytest",
]

[project.urls]
Homepage = "https://github.com/polarities/PyXC"
Documentation = "https://pyxc.readthedocs.org"
Repository = "https://github.com/polarities/PyXC.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.numpydoc_validation]
checks = [
    "GL01",
    "GL02",
    "GL03",
    "GL05",
    "GL06",
    "GL07",
    #"GL08",
    "SS01",
    "SS02",
    "SS03",
    "SS04",
    "SS05",
    "SS06",
    "PR01",
    "PR02",
    "PR03",
    "PR04",
    "PR05",
    "PR06",
    "PR07",
    "PR08",
    "PR09",
    "PR10",
]
exclude = [  # don't report on objects that match any of these regex
    '\.__repr__$',
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
